Bug 1479853: Prevent more than one VideoConduit having the same remote SSRC. r=ng

Differential Revision: https://phabricator.services.mozilla.com/D2738